Bug 55932 - Fix building with newer Valgrind
Summary: Fix building with newer Valgrind
Status: RESOLVED FIXED
Alias: None
Product: dbus
Classification: Unclassified
Component: core (show other bugs)
Version: unspecified
Hardware: All All
: medium normal
Assignee: Havoc Pennington
QA Contact:
URL:
Whiteboard: review+
Keywords: patch
Depends on:
Blocks:
 
Reported: 2012-10-12 16:31 UTC by Arun Raghavan
Modified: 2012-11-09 15:26 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
0001-Fix-building-with-newer-Valgrind.patch (3.29 KB, patch)
2012-10-12 16:33 UTC, Arun Raghavan
Details | Splinter Review

Description Arun Raghavan 2012-10-12 16:31:29 UTC
Attaching a simple patch to fix building with recent Valgrind (I have 3.8.0).
Comment 1 Arun Raghavan 2012-10-12 16:33:30 UTC
Created attachment 68494 [details] [review]
0001-Fix-building-with-newer-Valgrind.patch
Comment 2 Simon McVittie 2012-10-12 16:43:34 UTC
Comment on attachment 68494 [details] [review]
0001-Fix-building-with-newer-Valgrind.patch

Review of attachment 68494 [details] [review]:
-----------------------------------------------------------------

Looks fine to me, other committers are welcome to commit this (or I'll get round to it myself sooner or later).

::: dbus/dbus-valgrind-internal.h
@@ +34,5 @@
>  #else
> +#   define VALGRIND_CREATE_MEMPOOL(_1, _2, _3) do { } while (0) /* nothing */
> +#   define VALGRIND_DESTROY_MEMPOOL(_1) do { } while (0) /* nothing */
> +#   define VALGRIND_MEMPOOL_ALLOC(_1, _2, _3) do { } while (0) /* nothing */
> +#   define VALGRIND_MEMPOOL_FREE(_1, _2) do { } while (0) /* nothing */

Now that the macro has a non-empty expansion, the trailing "/* nothing */" no longer adds anything, and can be removed.
Comment 3 Simon McVittie 2012-11-09 15:26:08 UTC
Fixed in git for 1.6.10, 1.7.0


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.